--- a/package.json
+++ b/package.json
@@ -30,17 +30,22 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.1",
+    "@nestjs/mongoose": "^9.1.1",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/throttler": "^2.0.1",
+    "@nestjs/typeorm": "^8.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "helmet": "^5.1.0",
+    "mongoose": "^6.4.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
